# goph419-lab02-tp

./: README.md  pyproject.toml
examples/: driver.py
src/lab02/: linalg_interp.py
tests/: tests.py
